--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "components/boucle.ts",
   "scripts": {
     "test": "jest",
-    "start": "ts-node components/POO3/index.ts ",
+    "start": "ts-node components/(6) POO3/index.ts ",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
